Fixing spacing on 5-day forecast render

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 div.page-header {
   text-align: center;
 }
+
+.style12 {
+	height: 6px;
+	background: url(http://ibrahimjabbari.com/english/images/hr-12.png) repeat-x 0 0;
+    border: 0;
+}
